--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <!--JS-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <!--FONTAWESOME-->
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://use.fontawesome.com/caafb1794b.js"></script>
+    <script src="https://use.fontawesome.com/09c571cdbb.js"></script>
     <!--CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -35,16 +39,56 @@
 
         <div>
             <footer>
-                
+                <h1>Nous contacter</h1>
+                <p class='adresse'>9 rue Léopold Robert <br>75014 Paris </p>
+                <div class='contact'>
+                   <span>
+                       <i class='fas fa-phone' style='font-size:24px'></i>
+                       01 82 28 36 15
+                   </span>
+                   <br>
+                   <span>
+                       <i class='fas fa-envelope-open' style='font-size:24px'></i>
+                       contact[at]groupe-egae.fr
+                   </span>
+                </div>
+                <div class='reseau'>
+                    <span>
+                        <i class="fa fa-twitter" aria-hidden="true" style='font-size:24px'></i>
+                        @groupeegae
+                    </span>
+                    <br>
+                    <span>
+                        <i class="fa fa-facebook" aria-hidden="true" style='font-size:24px'></i>
+                        Sur Facebook
+                    </span>
+                </div>
             </footer>
             <section>
-                <article></article>
-                <article></article>
-                <article></article>
-                <article></article>
-                <article></article>
-                <article></article>
-                <article></article>
+                <article>
+                    <a href="https://egalactu.com/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/2108-2/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/le-federation-roller-renforce-son-dispositif-de-lutte-contre-les-violences-sexistes-et-sexuelles-avec-le-groupe-egae/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/lancement-dun-fonds-de-soutien-aux-organisations-feministes/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/les-8-recommandations-du-conseil-danalyse-economique-pour-lutter-contre-les-inegalites/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/les-cyberviolences-la-continuation-des-violences-en-ligne/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/une-augmentation-des-morts-violentes-au-sein-du-couple-en-2019/"></a>
+                </article>
+                <article>
+                    <a href="https://egalactu.com/les-femmes-expertes-moins-presentes-dans-les-medias-pendant-la-crise/"></a>
+                </article>
             </section>
         </div>
     </div>
