ajout retour à la ligne titre footer

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div id="colonne-4" class="col">
             <footer class="d-flex flex-column">
 
-                <h1>Nous contacter</h1>
+                <h1>Nous <br> contacter</h1>
                 <p class='adresse'>9 rue Léopold Robert <br>75014 Paris </p>
                 <div class='contact d-flex flex-column'>
                     <div>
