--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <!------- OVERLAY ------->
                 <div class="overlay"></div>
                     <h1 class="overlay-index mb-3">Le groupe Egae</h1>
-                    <span class="trait overlay-index"></span>
+                    <span class="trait overlay-index d-none d-lg-block"></span>
                     <p class="overlay-index">Découvrez notre histoire, notre équipe et nos réféences</p>
                     <nav class="overlay-index">
                         <ul>
@@ -73,7 +73,7 @@
                     <!------- OVERLAY ------->
                 <div class="overlay"></div>
                     <h1 class="overlay-index mb-3">L'approche du groupe Egae</h1>
-                    <span class="trait overlay-index"></span>
+                    <span class="trait overlay-index d-none d-lg-block"></span>
                     <p class="overlay-index">Le groupe Egae, c'est une approche innovante et percutante, pour faire
                         passer
                         l'égalité des textes à la réalité</p>
@@ -94,7 +94,7 @@
                     <!------- OVERLAY ------->
                 <div class="overlay"></div>
                     <h1 class="overlay-index mb-3">Les solutions</h1>
-                    <span class="trait overlay-index"></span>
+                    <span class="trait overlay-index d-none d-lg-block"></span>
                     <p class="overlay-index">Formations, sensibilisations, conseil, communication, audit: tous nos
                         outils à
                         votre service</p>
